--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,5 +1,3 @@
-/*font-family: 'Playfair Display', serif;
-font-family: 'Poppins', sans-serif;*/
 :root {
   --branding-color: #6c63ff;
   --secondary-color: #f9f7fe;
@@ -38,7 +36,7 @@ p {
 }
 
 .hero {
-  background-color: var(--secondary-color);
+  background: var(--secondary-color);
   text-align: center;
   padding: 160px 20px;
 }
@@ -52,26 +50,37 @@ p {
 
 .hero h2 {
   font-family: var(--heading-font-family);
-  font-size: 24px;
   font-weight: normal;
   line-height: 1.5;
+  font-size: 24px;
 }
 
-.about-section {
+.content-container {
   padding: 160px 20px;
 }
 
-.about-section h1 {
+.content h1 {
   font-size: 64px;
   line-height: 80px;
 }
 
-.about-section h2 {
+.content h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
 
-.about-section-content {
+.content h3 {
+  font-size: 24px;
+  line-height: 1.5;
+
+  font-family: var(--default-font-family);
+}
+
+.content p {
+  font-size: 14px;
+}
+
+.content {
   margin: 30px;
 }
 
@@ -93,7 +102,7 @@ p {
   padding: 15px 30px;
 }
 
-.project-description {
+.project-desciption {
   padding: 120px 60px;
 }
 
@@ -111,12 +120,12 @@ p {
     padding: 80px 20px;
   }
 
-  .about-section {
+  .content {
     text-align: center;
     padding: 0;
   }
 
-  .project-description {
+  .project-desciption {
     padding: 0;
     text-align: center;
   }
